# awaur

./: .gitignore  Cargo.toml  README.md
examples/pagination_example/: Cargo.toml
examples/pagination_example/src/: github.rs
src/: lib.rs  macros.rs  paginator.rs
src/endpoints/: errors.rs  macros.rs  mod.rs  response.rs
src/serde_with/: base62.rs  json_string.rs  mod.rs
src/wrapper/: client.rs  mod.rs  request.rs  statuscode.rs
