[package]
name = "awaur"
version = "0.1.3"
authors = [ "Jacob Birkett <jacob@birkett.dev>" ]
edition = "2021"
description = "AWAUR: Asynchronous Web API Utilities for Rust"
repository = "https://github.com/spikespaz/awaur"
license = "MIT"
keywords = [ "web", "rest", "async", "api", "utilities" ]
categories = [ "rust-patterns", "web-programming", "asynchronous", "concurrency" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dependencies for feature "paginator"
futures-core = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

# Dependencies for feature "serde-with"
serde_with = { version = "1", optional = true }
base62 = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = [ "paginator", "serde-with" ]

# Feature to enable asynchronous paginator
paginator = [ "dep:futures-core", "dep:async-trait" ]

# Base feature for "serde_with" extensions
serde-with = [ "dep:serde", "dep:serde_with" ]
serde-with-base62 = [ "serde-with", "dep:base62" ]
serde-with-json-string = [ "serde-with", "dep:serde_json" ]
