[package]
name = "awaur"
version = "0.1.3"
authors = [ "Jacob Birkett <jacob@birkett.dev>" ]
edition = "2021"
description = "AWAUR: Asynchronous Web API Utilities for Rust"
repository = "https://github.com/spikespaz/awaur"
license = "MIT"
keywords = [ "web", "rest", "async", "api", "utilities" ]
categories = [ "rust-patterns", "web-programming", "asynchronous", "concurrency" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dependencies for feature "paginator"
futures-core = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

# Dependencies for feature "serde-with"
serde_with = { version = "1", optional = true }
base62 = { version = "2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
# Feature to enable asynchronous paginator
paginator = [ "dep:futures-core", "dep:async-trait" ]

# Enable `serde_with::serde_as` support
serde-as-wrapper = [ "dep:serde", "dep:serde_with" ]
# Features for `[serde(with = "...")]` extensions
serde-with-base62 = [ "dep:serde", "dep:base62" ]
serde-with-json-string = [ "dep:serde", "dep:serde_json" ]

[dev-dependencies]
time = { version = "0.3", features = ["serde-well-known"] }
fake = { version = "2.5", features=['derive']}
rand = "0.8"
