[package]
name = "pagination_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awaur = { path = "../..", default-features = false, features = [ "paginator" ] }
async-trait = "0.1"
surf = "2.3"
smol = "1.2"
serde = "1"
serde_json = "1"
thiserror = "1"
